--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
 encoding//LAB1/Bai2/HelloServlet.java=UTF-8
+encoding//LAB2/Bai1/TamGiacServlet.java=UTF-8
+encoding//LAB2/Bai2/ResgisterServlet.java=UTF-8
+encoding//LAB2/Bai3/ResgisterServlets.java=UTF-8
